--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,14 +140,17 @@ include_directories(
 ## either from message generation or dynamic reconfigure
 # add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-## Declare a C++ executable
-## With catkin_make all packages are built within a single CMake context
-## The recommended prefix ensures that target names across packages don't collide
+
+
 add_executable(franka_test src/franka_test.cpp)
 target_link_libraries(franka_test ${catkin_LIBRARIES} ${Franka_LIBRARIES})
 
 add_executable(franka_test_impedance src/impedance_control_example.cpp)
 target_link_libraries(franka_test_impedance ${catkin_LIBRARIES} ${Franka_LIBRARIES} ${Eigen_LIBRARIES})
+
+add_executable(franka_action_client src/franka_action_client.cpp)
+target_link_libraries(franka_action_client ${catkin_LIBRARIES} ${Franka_LIBRARIES})
+#add_dependencies(franka_action_client beginner_tutorials_gencpp)
 
 
 ## Rename C++ executable without prefix
